# AutoBiz

./: .env.example  .gitignore  AUTOBIZ_ECOSYSTEM_PLAN_v4.6.md  AUTOBIZ_P1_TASK_TABLE_MERGED.md  Makefile  PROJECT_STATE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
autobiz/: __init__.py
autobiz/businesses/: __init__.py
autobiz/kernel/: __init__.py
autobiz/kernel/executor/: __init__.py  schema_validator.py  tool_contract.py  tool_registry.py
migrations/: env.py
migrations/versions/: 001_core_tables_p1_task_03_create_core_tables.py
tests/: __init__.py
tests/integration_internal/: test_hygiene_dev_stack.py
tests/unit/: test_sanity.py
tests/unit/kernel/: test_tool_registry.py
